# d3chart

./: README.md  TODO.md  categorical.csv  pyproject.toml  ramps.csv
standardcharts/: charts.py  main.py
