[project]
name = "standardcharts"
version = "0.1.1"
description = "D3-style chart maker CLI tool for generating SVG charts from CSV data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pandas>=2.3.1",
]

[project.scripts]
d3chart = "standardcharts.main:cli"
